--- a/src/LJMSCourse.CommandService.Api/appsettings.json
+++ b/src/LJMSCourse.CommandService.Api/appsettings.json
@@ -6,6 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "CommandService":  "http://localhost:6000/api/v1/CommandPlatforms/" 
+  "AllowedHosts": "*"
 }
