--- a/k8s/commandservice-depl.yaml
+++ b/k8s/commandservice-depl.yaml
@@ -1,31 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: platformservice-depl
+  name: commandservice-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: platformservice
+      app: commandservice
   template:
     metadata:
       labels:
-        app: platformservice
+        app: commandservice
     spec:
       containers:
-      - name: platformservice
-        image: smcgettrick/platformservice:latest
+      - name: commandservice
+        image: smcgettrick/commandservice:latest
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: platformservice-clusterip-srv
+  name: commandservice-clusterip-srv
 spec:
   type: ClusterIP
   selector:
-    app: platformservice
+    app: commandservice
   ports:
     - port: 80
       targetPort: 80
-      name: platformservice
+      name: commandservice
       protocol: TCP
