Add SQL Server to Platform Service

--- a/src/LJMSCourse.PlatformService.Api/appsettings.Production.json
+++ b/src/LJMSCourse.PlatformService.Api/appsettings.Production.json
@@ -1,11 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
-  "CommandService": "http://commandservice-clusterip-srv:80/api/v1/CommandPlatforms/"
+  "CommandService": "http://commandservice-clusterip-srv:80/api/v1/CommandPlatforms/",
+  "ConnectionStrings": {
+    "PlatformDb": "Server=platformservice-mssql-clusterip-srv,1433;Initial Catalog=PlatformDb;User Id=sa"
+  }
 }
