--- a/k8s/platformservice-depl.yaml
+++ b/k8s/platformservice-depl.yaml
@@ -15,6 +15,12 @@ spec:
       containers:
       - name: platformservice
         image: smcgettrick/platformservice:latest
+        env:
+        - name: SA_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mssql
+              key: SA_PASSWORD
 ---
 apiVersion: v1
 kind: Service
