--- a/src/LJMSCourse.PlatformService.Api/appsettings.Production.json
+++ b/src/LJMSCourse.PlatformService.Api/appsettings.Production.json
@@ -2,5 +2,9 @@
   "CommandService": "http://commandservice-clusterip-srv:80/api/v1/CommandPlatforms/",
   "ConnectionStrings": {
     "PlatformDb": "Server=platformservice-mssql-clusterip-srv,1433;Initial Catalog=PlatformDb;User Id=sa"
+  },
+  "RabbitMQ": {
+    "Host": "rabbitmq-clusterip-srv",
+    "Port": "5672"
   }
 }
