--- a/src/LJMSCourse.PlatformService.Api/appsettings.Development.json
+++ b/src/LJMSCourse.PlatformService.Api/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "CommandService": "http://localhost:6000/api/v1/CommandPlatforms/",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": "5672" 
+  } 
 }
