--- a/src/LJMSCourse.CommandService.Api/appsettings.Development.json
+++ b/src/LJMSCourse.CommandService.Api/appsettings.Development.json
@@ -9,5 +9,8 @@
   "RabbitMQ": {
     "Host": "localhost",
     "Port": "5672"
-  }
+  },
+  "Grpc": {
+    "PlatformService": "https://localhost:5001" 
+  } 
 }
