--- a/src/LJMSCourse.CommandService.Api/appsettings.Production.json
+++ b/src/LJMSCourse.CommandService.Api/appsettings.Production.json
@@ -2,5 +2,8 @@
   "RabbitMQ": {
     "Host": "rabbitmq-clusterip-srv",
     "Port": "5672"
+  },
+  "Grpc": {
+    "PlatformService": "http://platformservice-clusterip-srv:666"
   }
 }
