--- a/src/LJMSCourse.PlatformService.Api/appsettings.Development.json
+++ b/src/LJMSCourse.PlatformService.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "CommandService": "http://localhost:6000/api/v1/CommandPlatforms/",
+  "CommandService": "http://localhost:6000/api/c/plaforms/",
   "RabbitMQ": {
     "Host": "localhost",
     "Port": "5672" 
