--- a/src/LJMSCourse.PlatformService.Api/appsettings.Production.json
+++ b/src/LJMSCourse.PlatformService.Api/appsettings.Production.json
@@ -1,10 +1,22 @@
 {
-  "CommandService": "http://commandservice-clusterip-srv:80/api/v1/CommandPlatforms/",
+  "CommandService": "http://commandservice-clusterip-srv:80/api/c/platforms/",
   "ConnectionStrings": {
     "PlatformDb": "Server=platformservice-mssql-clusterip-srv,1433;Initial Catalog=PlatformDb;User Id=sa"
   },
   "RabbitMQ": {
     "Host": "rabbitmq-clusterip-srv",
     "Port": "5672"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Grpc": {
+        "Protocols": "Http2",
+        "Url": "http://platformservice-clusterip-srv:666"
+      },
+      "WebApi": {
+        "Protocols": "Http1",
+        "Url": "http://platformservice-clusterip-srv:80"
+      }
+    }
   }
 }
