--- a/k8s/ingress-srv.yaml
+++ b/k8s/ingress-srv.yaml
@@ -10,14 +10,14 @@ spec:
     - host: acme.com
       http:
         paths:
-          - path: /api/v1/platforms
+          - path: /api/platforms
             pathType: Prefix
             backend:
               service:
                 name: platformservice-clusterip-srv
                 port:
                   number: 80
-          - path: /api/v1/commandplatforms
+          - path: /api/c/platforms
             pathType: Prefix
             backend:
               service:
