--- a/k8s/rabbitmq-depl.yaml
+++ b/k8s/rabbitmq-depl.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbitmq-depl
+  annotations:
+    seccomp.security.alpha.kubernetes.io/pod: "docker/default"
 spec:
   replicas: 1
   selector:
